fix wrong background-color.

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -1,10 +1,9 @@
-<<<<<<< HEAD
 /* 全站背景色修改=whitesmoke */
-body, div#local-search-result, a.btn:hover {background-color: whitesmoke}
-li.tab, li.tab.active {background-color: whitesmoke !important}
-.highlight, pre, div.note {background-color: #E6E6E6 !important}
-.post-body h1, .post-body h2, .post-body h3, .post-body h4, .post-body h5, .post-body h6 {border-bottom: 1px solid #E6E6E6}
-blockquote {border-left: 4px solid lightgrey}
+body, div#local-search-result, a.btn:hover {background: whitesmoke !important}
+li.tab, li.tab.active {background: whitesmoke !important}
+.highlight, pre, div.note {background: #E6E6E6 !important}
+.post-body h1, .post-body h2, .post-body h3, .post-body h4, .post-body h5, .post-body h6 {border-bottom: 1px solid #E6E6E6 !important}
+blockquote {border-left: 4px solid lightgrey !important}
 
 /* 鼠标样式 */
 * {cursor: url('/images/round-cursor.png') 12 12, auto !important}
@@ -16,7 +15,7 @@ header#header.header {background-color: #222}
 
 /* 修改顶部栏上下边距 */
 div.header-inner {
-    padding-top: 64px;
+    padding-top: 60px;
     padding-bottom: 60px;
 }
 
